[package]
name = "pancurses"
description = """
pancurses is a curses libary for Rust that supports both Unix and Windows
platforms by abstracting away the backend that it uses
(ncurses-rs and pdcurses-sys respectively).
"""
homepage = "https://github.com/ihalila/pancurses"
documentation = "http://ihalila.github.io/pancurses/pancurses/"
repository = "https://github.com/ihalila/pancurses"
readme = "README.md"
license = "MIT"
keywords = ["pancurses", "curses", "ncurses", "pdcurses"]
version = "0.4.0"
authors = ["Ilkka Halila <ilkka@hali.la>"]

[lib]
name = "pancurses"

[dependencies]
log = "0.3"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
pdcurses-sys = "0.3"
[target.'cfg(unix)'.dependencies]
ncurses = "5.82.0"

[dev-dependencies]
rand = "0.3"
